--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,10 +2,12 @@
 
 
         <!--header-->
-        <header class="navbar navbar-expand navbar-dark bg-dark">
+        <header class="navbar navbar-expand navbar-light bg-light border-bottom shadow-sm">
             <nav class="navbar-nav container">
                 <!--brand-->
-                <a href="{% url 'show.post' %}" class="navbar-brand">Instagram</a>
+                <a href="{% url 'show.post' %}" class="navbar-brand">
+                    <img src="{% static 'img/instagram.png' %}" alt="logo" height="50">
+                </a>
                 <!--search box-->
                 <div class="search-box mx-auto">
                     <input class="form-control" type="search" placeholder="Search" aria-label="Search">
@@ -13,11 +15,11 @@
                 <!--menu-->
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item">
-                        <a href="{% url 'show.post' %}" class="nav-link"><span class="fas fa-home "></span></a></span>
+                        <a href="{% url 'show.post' %}" class="nav-link"><span class="fas fa-home "></span></a>
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link"><span class="far fa-paper-plane"></span></a>
-                        </span>
+
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link"><span class="far fa-compass"></span></a>
@@ -28,9 +30,9 @@
                 </ul>
                 <!--profile pic-->
                 <div class="profile">
-                    {% if request.user %}
-                        <a href="">
-                            <img src="{{ request.user.image }}" alt="profile" class="rounded-circle bg-white" width="50">
+                    {% if request.user.is_active %}
+                        <a href="{% url 'profile' %}">
+                            <img src="{{ request.user.profile.image.url }}" alt="profile" class="rounded-circle bg-white" width="50">
                         </a>
                     {% endif %}
 
