--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="{% static 'img/icon.png' %}" type = "image/x-icon">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.css' %}">
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <title>{% block title %}
+    instagram
 {% endblock %}</title>
 
 </head>
@@ -21,7 +23,6 @@
     {% block content %}
 
     {% endblock %}
-
 
     <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
