--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 
 
         <!--header-->
-        <header class="navbar navbar-expand navbar-light bg-light border-bottom shadow-sm">
+        <header class="navbar navbar-expand navbar-light bg-light border-bottom shadow-lg">
             <nav class="navbar-nav container">
                 <!--brand-->
                 {% if request.user.is_active %}
