--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,10 +29,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link"><span class="far fa-paper-plane"></span></a>
-
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link"><span class="far fa-compass"></span></a>
+                        <a href="{% url 'explore.post' %}" class="nav-link"><span class="far fa-compass"></span></a>
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link"><span class="far fa-heart"></span></a>
